--- a/KiiTutorialApp/Base.lproj/Main.storyboard
+++ b/KiiTutorialApp/Base.lproj/Main.storyboard
@@ -480,7 +480,7 @@
                                     <constraint firstAttribute="width" constant="102" id="xtK-tF-SNb"/>
                                 </constraints>
                             </imageView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" text="Attach a photo to the KiiObject" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vGE-PK-dK8">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" text="Attach a photo to the KiiObject" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vGE-PK-dK8">
                                 <rect key="frame" x="9" y="86" width="300" height="42"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="42" id="ddQ-mM-Vgt"/>
@@ -811,7 +811,7 @@ What you have done so far:</string>
         <scene sceneID="MGz-t1-gej">
             <objects>
                 <tableViewController title="Master" id="SZA-bT-fWq" customClass="RBLControlViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="UlX-v3-kzl">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" restorationIdentifier="image_cell" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="UlX-v3-kzl">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -931,7 +931,7 @@ What you have done so far:</string>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ENJ-mD-Dgt" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2792" y="-1353"/>
+            <point key="canvasLocation" x="1973" y="-2046"/>
         </scene>
         <!--Title-->
         <scene sceneID="bgw-rJ-vR9">
@@ -1045,7 +1045,8 @@ What you have done so far:</string>
                         <outlet property="btnConnect" destination="heU-8O-T9z" id="lES-Kw-V6Z"/>
                         <outlet property="btnConnectLast" destination="K7F-pt-6wU" id="zVY-rf-EXc"/>
                         <segue destination="uRw-fK-UdI" kind="push" identifier="showDevice" id="nPc-vv-be7"/>
-                        <segue destination="fTy-9U-s0Y" kind="push" identifier="gotoControlVC" id="O89-bH-42W"/>
+                        <segue destination="fTy-9U-s0Y" kind="push" identifier="gotoControlVCbkp" id="O89-bH-42W"/>
+                        <segue destination="SZA-bT-fWq" kind="push" identifier="gotoControlVC" id="Djl-Wk-Gf5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lvl-hS-wqg" userLabel="First Responder" sceneMemberID="firstResponder"/>
